src/gtk-3.0/gtk-widgets.css
/**
 * Copyright (c) 2017 Vlasta Vesely <vlastavesely@protonmail.ch>
 *
 * This file is part of Raleigh Reloaded GTK theme.
 *
 * This is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

/***********
 * general *
 ***********/
* {
	-gtk-icon-style: regular; /* disable symbolic icons */
}
.background {
	background-color: @theme_bg_color;
	color: @theme_fg_color;
}
*:disabled {
	color: shade(@theme_bg_color, .6);
	text-shadow: 1px 1px @theme_base_color;
	-gtk-icon-effect: dim;
}
.flat:not(:hover):not(:checked) {
	border: 0;
}

/*************
 * selection *
 *************/
selection,
*:selected,
.view:selected {
	background: @theme_bg_color;
	color: @theme_fg_color;
}
selection:focus,
*:selected:focus,
.view:selected:focus,
*:focus *:selected {
	background-color: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}
.rubberband,
.view.rubberband {
	background-color: alpha(@theme_selected_bg_color, 0.3);
	border: 1px solid @theme_selected_bg_color;
}

/***********
 * buttons *
 ***********/
button {
	background: @theme_bg_color;
	border-image: url("assets/button.png") 3 / 3px stretch;
	padding: 5px;
}
button:hover {
	background-color: shade(@theme_bg_color, 1.05);
}
button:active {
	border-image-source: url("assets/button-active.png");
}
button:active:hover,
button.toggle:checked,
button.toggle:active:hover,
stackswitcher button:checked {
	background-color: shade(@theme_bg_color, .9);
	border-image-source: url("assets/button-pressed.png");
	padding: 6px 4px 4px 6px;
}
button:focus {
	border-image-source: url("assets/button-focus.png");
}
button:disabled {
	border-image-source: url("assets/button-disabled.png");
}
button.link {
	color: @link_color;
}
button.color * {
	border-image: url("assets/frame-etched-out.png") 2 / 2px stretch;
	margin: 0 5px;
	min-height: 16px;
}

/**************
 * scrollbars *
 **************/
scrollbar button,
scrollbar button:hover,
scrollbar button:active,
scrollbar button:active:hover,
scrollbar button:disabled {
	background: @theme_bg_color no-repeat;
	color: black;
	font-size: 8px;
	min-height: 14px;
	min-width: 14px;
	padding: 0;
}
scrollbar button:disabled {
	color: shade(@theme_bg_color, .6);
}
scrollbar slider {
	background: @theme_bg_color;
	border: solid 2px;
	border-image: url("assets/button.png") 2 / 2px stretch;
}
scrollbar slider:hover {
	background-color: shade(@theme_bg_color, 1.05);
}
scrollbar.vertical slider {
	min-height: 4px;
	min-width: 10px;
}
scrollbar.horizontal slider {
	min-height: 10px;
	min-width: 4px;
}
scrollbar.vertical button.up {
	-gtk-icon-source: url("assets/scrollbar-button-top.png");
}
scrollbar.vertical button.down {
	-gtk-icon-source: url("assets/scrollbar-button-bottom.png");
}
scrollbar.horizontal button.up {
	-gtk-icon-source: url("assets/scrollbar-button-left.png");
}
scrollbar.horizontal button.down {
	-gtk-icon-source: url("assets/scrollbar-button-right.png");
}
scrollbar.vertical button.up:disabled {
	-gtk-icon-source: url("assets/scrollbar-button-disabled-top.png");
}
scrollbar.vertical button.down:disabled {
	-gtk-icon-source: url("assets/scrollbar-button-disabled-bottom.png");
}
scrollbar.horizontal button.up:disabled {
	-gtk-icon-source: url("assets/scrollbar-button-disabled-left.png");
}
scrollbar.horizontal button.down:disabled {
	-gtk-icon-source: url("assets/scrollbar-button-disabled-right.png");
}

/**************
 * checkboxes *
 **************/
check, radio {
	margin: 2px 5px 2px 2px;
}
check:disabled, radio:disabled {
	border-color: shade(@theme_bg_color, .6);
}
check {
	-gtk-icon-source: url("assets/checkbox-unchecked.png");
}
check:checked {
	-gtk-icon-source: url("assets/checkbox-checked.png");
}
check:checked:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-checked-disabled.png"));
}
check:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked-disabled.png"));
}
check:indeterminated {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed.png"));
}
check:indeterminated:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed-disabled.png"));
}

/******************
 * radion buttons *
 ******************/
radio,
.view.cellradio {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked.png"));
	margin: 2px;
}
radio:checked {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-checked.png"));
}
radio:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked-disabled.png"));
}
radio:checked:disabled {
	-gtk-icon-source: -gtk-scaled(url("assets/radio-checked-disabled.png"));
}

/****************
 * text entries *
 ****************/
entry {
	background: @theme_base_color;
	border-image: url("assets/entry.png") 2 / 2px stretch;
	padding: 5px;
}

/**************
 * comboboxes *
 **************/
combobox arrow {
	-gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
	color: @theme_fg_color;
	min-height: 16px;
	min-width: 16px;
}
combobox button:first-child arrow {
	background: url("assets/combobox-arrow-separator.png") no-repeat left center;
	padding-left: 4px;
}


/*********
 * menus *
 *********/
menubar {
	border-image: url("assets/button.png") 2 / 2px stretch;
}
menu {
	border: solid 3px;
	border-image: url("assets/menu.png") 3 / 3px stretch;
	padding: 2px;

}
menubar > menuitem {
	margin: 1px;
}
menubar > menuitem:hover {
	background: @theme_selected_bg_color;
	color: @theme_selected_fg_color;
}
menuitem {
	padding: 5px;
}
/* ... */

